Decrease memory settings to detect memory leaks
--HG--
branch : 5.21.x